<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/actionBarToolbar"
    tools:context="com.example.kant.epiandroid.HomeActivity">

    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/app_bar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView" >

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="3">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_modules_button"
                        android:id="@+id/modules_button"
                        android:layout_span="2" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_activities_button"
                        android:id="@+id/activities_button"
                        android:layout_column="3" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_projects_button"
                        android:id="@+id/projects_button" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_susies_button"
                        android:id="@+id/susies_button"
                        android:layout_column="3" />

                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_marks_button"
                        android:id="@+id/marks_button"
                        android:layout_span="2" />
                </TableRow>

            </TableLayout>
        </ScrollView>

    </LinearLayout>

    <include layout="@layout/navdrawer" />

</android.support.v4.widget.DrawerLayout>
