<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kant.epiandroid.LoginActivity">

    <include layout="@layout/app_bar" />

    <RelativeLayout
        android:id="@+id/loginRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.kant.epiandroid.LoginActivity">

        <EditText
            android:id="@+id/loginText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/passwordText"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/passwordText"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/login_text"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/loginText"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/password_text"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/passwordText"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:text="@string/login_button" />

    </RelativeLayout>

</LinearLayout>